Fix CSS overflowing in sm devices caused by tables

--- a/assets/css/mediaQueries.css
+++ b/assets/css/mediaQueries.css
@@ -72,7 +72,7 @@
 
     .page-content-container,
     .post-content-container {
-        padding: 0 1.5rem;
+        padding: 0 0.5rem;
     }
 
     .author-info {
@@ -106,6 +106,17 @@
     #breadcrumbs {
         font-size: 0.75rem;
         gap: 0.5rem;
+    }
+
+    .mermaid {
+        width: 320px;
+        overflow: scroll;
+    }
+
+    table th,
+    table td {
+        padding: 0;
+        font-size: 0.8rem;
     }
 }
 
